# simple-benchmark-demo

./: CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt
benchmarks/matrix/: CMakeLists.txt  matrixTest.cpp
benchmarks/sequence/: CMakeLists.txt  sequenceTest.cpp
data/matrix/: 01-laptop-i7-gcc.json  02-server-xeon-e5-gcc.json  03-desktop-i7-gcc.json  04-laptop-i7-clang.json  05-desktop-i7-clang.json  06-laptop-i9-gcc.json
data/sequence/: 01-laptop-i7-gcc.json  02-server-xeon-e5-gcc.json
scripts/: plotMatrixTests.py  plotSequenceTests.py
